Z-index fix

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -476,7 +476,7 @@ nav li a {
   transform: translate(-50%, -50%) scale3d(0.5, 0.5, 0.5);
   transition: all 600ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
-  z-index: -1;
+  z-index: 1;
 }
 
 @media (min-width: 768px) {
@@ -515,6 +515,7 @@ nav li a {
 .input-group.radio input:checked~label:before {
   -webkit-transform: translate(-50%, -50%) scale3d(56, 56, 1);
   transform: translate(-50%, -50%) scale3d(56, 56, 1);
+  z-index: -1;
   opacity: 1;
 }
 
